name:                fragnix-cli
version:             0.1.0.0
synopsis:            Fragnix command line interface
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Philipp Schuster
maintainer:          philipp.schuster@uni-tuebingen.de
-- copyright:           
category:            Distribution
build-type:          Simple
extra-source-files:  ChangeLog.md, README.md
cabal-version:       >=1.10
data-files:          fragnix/cbits/*.c
                     fragnix/include/*.h

executable fragnix-cli
  main-is:             Main.hs
  other-modules:       Build
                       Init
  -- other-extensions:    
  build-depends:       base >=4.9 && <4.10,
                       containers >=0.5.0.0 && <0.6,
                       directory >=1.3 && < 1.4,
                       haskell-names >=0.9.0 && <0.10,
                       haskell-src-exts >=1.19.1 && <1.20,
                       clock >=0.7.2 && <0.8,
                       optparse-applicative >=0.13.2.0 && <0.14,
                       servant-client >=0.11 && <0.12,
                       http-client >=0.5.7.0 && <0.6,
                       fragnix-server,
                       fragnix
  hs-source-dirs:      src
  default-language:    Haskell2010

